# llvm-analysis-and-transform-passes

./: CMakeLists.txt  README.md  complexcountpass.cpp  simplecountpass.cpp
DynCount/: CMakeCache.txt  CMakeLists.txt  DynCount.cpp
HeapTimeTestProgram/: main.cpp
SmallTestProgram/: print.c
StaticCount/: CMakeCache.txt  CMakeLists.txt  StaticCount.cpp
heaptime/: CMakeLists.txt
smalltest/: b.bc  b1.bc  instrumentedprogram.bc  p.bc  print.bc  print.c  smallProgram.c  smallprogramandprint.bc  sp.bc
